--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
