--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.5",
     "bootstrap": "^5.2.3",
+    "chart.js": "^4.3.0",
     "fullpage.js": "^4.0.20",
     "nanoid": "^4.0.2",
     "react": "^18.2.0",
@@ -29,6 +30,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.7.2",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.9",
